2006-07-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gschlas.c: Added comment on free of cwd

2006-06-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* man/grenum.1, src/grenum.c, src/grenum.h: Checked in latest
	version from Levente Kovacs.  Thanks!

2006-04-05 02:32  Dan McMahill <danmc>

        * src/gsch2pcb.c: - look at the environment variable GNETLIST if
          set to get the name of   the gnetlist executible.  Defaults to
          gnetlist if GNETLIST is not set.

          - add a pointer to the gEDA, PCB and gEDA wiki pages in the
          --help output.

          - run gnetlist -g pcbpins as part of the gnetlist runs to
          generate a PCB   actions file which propagates pin names (not
          just the numbers) from schematic   to layout.

2006-03-12 Ales Hvezda   <ahvezda@geda.seul.org>

        * lib/system-gschlasrc.in: Removed load for the system-gafrc file,
        since it is loaded by libgeda first.

2006-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20060123

        * README: Updated for the new year and release.

2005-11-27 Carlos Nieves Onega <cnieves@iespana.es>
	* src/globals.c: Added setting of load_newer_backup_func to NULL.
	It is needed now libgeda checks for autosave backup files when
	opening a schematic.
	
2005-09-27 18:46  Dan McMahill <danmc>

        * gschlas/g_rc.c, gschlas/gschlas.c, src/convert_sym.c,
          src/gmk_sym.c, src/grenum.c, src/olib.l: remove various compiler
          warnings

2005-09-11 Werner Hoch <werner.ho@gmx.de>

        * ChangeLog.tragesym, examples/tragesym/4099.src,
          examples/tragesym/AT90S8535_TQFP.src,
          examples/tragesym/template.src, examples/tragesym/test1.src,
          examples/tragesym/test2.src, examples/tragesym/test3.src:
          ChangeLog entry copied, fixed typo

2005-08-20 Werner Hoch <werner.ho@gmx.de>

	* scripts/gschemdoc.sh: added konqueror and firefox to the browser list
